Fixed deprecated classes and methods